src/tests/fixtures/arguments/ObjectLiteralArgument.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
export default class Query {
  /** @GQLField */
  hello({ greeting }: { greeting: { foo: string; bar: string } }): string {
    return "Hello world!";
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/arguments/ObjectLiteralArgument.invalid.ts:4:35 - error: Unexpected type literal. You may want to define a named GraphQL type elsewhere and reference it here.

4   hello({ greeting }: { greeting: { foo: string; bar: string } }): string {
                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
